# aop-kinetic-process-framework

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  scientific_data_review.md
.github/workflows/: python-tests.yml
data/: representative_effluent_matrix.csv
docs/: README.md  api_reference.md  assumptions_and_limitations.md  examples.md  quickstart.md  scientific_background.md  theory.md  units_and_conventions.md
examples/: 01_matrix_scavenging_secondary_effluent.py  02_kapp_and_treatment_time.py  03_doc_sensitivity.py  04_oxidant_radical_yields.py  05_plot_scavenging_contributions.py  06_treatment_train_screening.py  07_reactor_scale_indicators.py  08_unit_conversions_for_matrix_setup.py  09_carbonate_system_scavenging.py  10_pH_effect_on_carbonate_scavenging.py
src/aop_framework/: __init__.py  carbonate.py  conversions.py  energy.py  h2o2.py  kinetics.py  ozonation.py  plotting.py  reactor.py  scavenging.py  treatment_train.py
tests/: test_carbonate.py  test_conversions.py  test_energy.py  test_h2o2.py  test_imports.py  test_kinetics.py  test_ozonation.py  test_reactor.py  test_scavenging.py  test_treatment_train.py
