[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aop-kinetic-process-framework"
version = "0.1.3"
description = "Python framework for matrix-aware kinetic and process-level evaluation of advanced oxidation processes in wastewater treatment."
authors = [
    { name = "Ahmad Saylam" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "advanced oxidation processes",
    "wastewater treatment",
    "radical scavenging",
    "kinetics",
    "hydroxyl radical",
    "micropollutants",
    "process engineering"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/saylamah/aop-kinetic-process-framework"
Documentation = "https://github.com/saylamah/aop-kinetic-process-framework/tree/main/docs"
Repository = "https://github.com/saylamah/aop-kinetic-process-framework"
Issues = "https://github.com/saylamah/aop-kinetic-process-framework/issues"
Changelog = "https://github.com/saylamah/aop-kinetic-process-framework/blob/main/CHANGELOG.md"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel"
]

[tool.setuptools.packages.find]
where = ["src"]
